// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/TextField can be Boxed 1`] = `
<div
  className="mdc-text-field mdc-text-field--upgraded mdc-text-field--box"
>
  <input
    className="mdc-text-field__input"
    defaultValue={null}
    id="unique-component-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <label
    className="mdc-floating-label"
    focused="false"
    htmlFor="unique-component-id"
    style={Object {}}
  />
  <div
    className="mdc-text-field__bottom-line"
  />
</div>
`;

exports[`components/TextField can be a Textarea 1`] = `
<div
  className="mdc-text-field mdc-text-field--upgraded mdc-text-field--textarea"
>
  <textarea
    className="mdc-text-field__input"
    defaultValue={null}
    id="unique-component-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <label
    className="mdc-floating-label"
    focused="false"
    htmlFor="unique-component-id"
    style={Object {}}
  />
  <div
    className="mdc-text-field__bottom-line"
  />
</div>
`;

exports[`components/TextField can be dense 1`] = `
<div
  className="mdc-text-field mdc-text-field--upgraded mdc-text-field--dense"
>
  <input
    className="mdc-text-field__input"
    defaultValue={null}
    id="unique-component-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <label
    className="mdc-floating-label"
    focused="false"
    htmlFor="unique-component-id"
    style={Object {}}
  />
  <div
    className="mdc-text-field__bottom-line"
  />
</div>
`;

exports[`components/TextField can be disabled 1`] = `
<div
  className="mdc-text-field mdc-text-field--upgraded mdc-text-field--disabled"
>
  <input
    className="mdc-text-field__input"
    defaultValue={null}
    disabled="disabled"
    id="unique-component-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <label
    className="mdc-floating-label"
    focused="false"
    htmlFor="unique-component-id"
    style={Object {}}
  />
  <div
    className="mdc-text-field__bottom-line"
  />
</div>
`;

exports[`components/TextField can be full width 1`] = `
<div
  className="mdc-text-field mdc-text-field--upgraded mdc-text-field--fullwidth"
>
  <input
    aria-label={null}
    className="mdc-text-field__input"
    defaultValue={null}
    id="unique-component-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder={null}
    type="text"
  />
  <div
    className="mdc-text-field__bottom-line"
  />
</div>
`;

exports[`components/TextField can be marked as invalid 1`] = `
<div
  className="mdc-text-field mdc-text-field--upgraded"
>
  <input
    className="mdc-text-field__input"
    defaultValue={null}
    id="unique-component-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <label
    className="mdc-floating-label"
    focused="false"
    htmlFor="unique-component-id"
    style={Object {}}
  />
  <div
    className="mdc-text-field__bottom-line"
  />
</div>
`;

exports[`components/TextField can be marked as invalid 2`] = `
<div
  className="mdc-text-field mdc-text-field--upgraded mdc-text-field--invalid"
>
  <input
    className="mdc-text-field__input"
    defaultValue={null}
    id="unique-component-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <label
    className="mdc-floating-label"
    focused="false"
    htmlFor="unique-component-id"
    style={Object {}}
  />
  <div
    className="mdc-text-field__bottom-line"
  />
</div>
`;

exports[`components/TextField can be outlined 1`] = `
<div
  className="mdc-text-field mdc-text-field--upgraded mdc-text-field--outlined"
>
  <input
    className="mdc-text-field__input"
    defaultValue={null}
    id="unique-component-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <label
    className="mdc-floating-label"
    focused="false"
    htmlFor="unique-component-id"
    style={Object {}}
  />
  <div
    className="mdc-text-field__outline"
  >
    <svg>
      <path
        className="mdc-text-field__outline-path"
      />
    </svg>
  </div>
  <div
    className="mdc-text-field__idle-outline"
  />
</div>
`;

exports[`components/TextField can have a label 1`] = `
<div
  className="mdc-text-field mdc-text-field--upgraded"
>
  <input
    className="mdc-text-field__input"
    defaultValue={null}
    id="unique-component-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <label
    className="mdc-floating-label"
    focused="false"
    htmlFor="unique-component-id"
    style={Object {}}
  >
    foo
  </label>
  <div
    className="mdc-text-field__bottom-line"
  />
</div>
`;

exports[`components/TextField can have a leadingIcon 1`] = `
<div
  className="mdc-text-field mdc-text-field--upgraded mdc-text-field--with-leading-icon"
>
  <i
    className="mdc-text-field__icon material-icons"
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex="0"
  >
    favorite
  </i>
  <input
    className="mdc-text-field__input"
    defaultValue={null}
    id="unique-component-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <label
    className="mdc-floating-label"
    focused="false"
    htmlFor="unique-component-id"
    style={Object {}}
  />
  <div
    className="mdc-text-field__bottom-line"
  />
</div>
`;

exports[`components/TextField can have a no floating label 1`] = `
<div
  className="mdc-text-field mdc-text-field--upgraded"
>
  <input
    className="mdc-text-field__input"
    defaultValue={null}
    id="unique-component-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <label
    className="mdc-floating-label"
    focused="false"
    htmlFor="unique-component-id"
    style={Object {}}
  />
  <div
    className="mdc-text-field__bottom-line"
  />
</div>
`;

exports[`components/TextField can have a trailing Icon 1`] = `
<div
  className="mdc-text-field mdc-text-field--upgraded mdc-text-field--with-trailing-icon"
>
  <input
    className="mdc-text-field__input"
    defaultValue={null}
    id="unique-component-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <label
    className="mdc-floating-label"
    focused="false"
    htmlFor="unique-component-id"
    style={Object {}}
  />
  <i
    className="mdc-text-field__icon material-icons"
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex="0"
  >
    favorite
  </i>
  <div
    className="mdc-text-field__bottom-line"
  />
</div>
`;

exports[`components/TextField can have a type 1`] = `
<div
  className="mdc-text-field mdc-text-field--upgraded"
>
  <input
    className="mdc-text-field__input"
    defaultValue={null}
    id="unique-component-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="bar"
  />
  <label
    className="mdc-floating-label"
    focused="false"
    htmlFor="unique-component-id"
    style={Object {}}
  />
  <div
    className="mdc-text-field__bottom-line"
  />
</div>
`;

exports[`components/TextField can have an helper Text 1`] = `
<div
  className="rmdc-text-field-wrapper"
>
  <div
    className="mdc-text-field mdc-text-field--upgraded"
  >
    <input
      aria-controls="unique-component-id-helper-text"
      className="mdc-text-field__input"
      defaultValue={null}
      id="unique-component-id"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="text"
    />
    <label
      className="mdc-floating-label"
      focused="false"
      htmlFor="unique-component-id"
      style={Object {}}
    />
    <div
      className="mdc-text-field__bottom-line"
    />
  </div>
  <p
    aria-hidden="true"
    className="mdc-text-field-helper-text"
  >
    foobar
  </p>
</div>
`;

exports[`components/TextField can have an helper text persistent 1`] = `
<div
  className="mdc-text-field mdc-text-field--upgraded"
>
  <input
    className="mdc-text-field__input"
    defaultValue={null}
    id="unique-component-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <label
    className="mdc-floating-label"
    focused="false"
    htmlFor="unique-component-id"
    style={Object {}}
  />
  <div
    className="mdc-text-field__bottom-line"
  />
</div>
`;

exports[`components/TextField can have an helper text with a validation message 1`] = `
<div
  className="mdc-text-field mdc-text-field--upgraded"
>
  <input
    className="mdc-text-field__input"
    defaultValue={null}
    id="unique-component-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <label
    className="mdc-floating-label"
    focused="false"
    htmlFor="unique-component-id"
    style={Object {}}
  />
  <div
    className="mdc-text-field__bottom-line"
  />
</div>
`;

exports[`components/TextField getValue() returns the input value 1`] = `
<div
  className="mdc-text-field mdc-text-field--upgraded"
>
  <input
    className="mdc-text-field__input"
    defaultValue="hello"
    id="unique-component-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <label
    className="mdc-floating-label mdc-floating-label--float-above"
    focused="false"
    htmlFor="unique-component-id"
    style={Object {}}
  />
  <div
    className="mdc-text-field__bottom-line"
  />
</div>
`;

exports[`components/TextField renders correctly 1`] = `
<div
  className="mdc-text-field mdc-text-field--upgraded"
>
  <input
    className="mdc-text-field__input"
    defaultValue={null}
    id="unique-component-id"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
  />
  <label
    className="mdc-floating-label"
    focused="false"
    htmlFor="unique-component-id"
    style={Object {}}
  />
  <div
    className="mdc-text-field__bottom-line"
  />
</div>
`;
